--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><span>Medycyna</span>Estetyczna</a>
+              <a class="navbar-brand" href="#hero"><span class="logo">Medycyna</span>Estetyczna</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -35,20 +35,43 @@
             </div>
           </nav>
     </header>
-    <main id="hero">
+    <section id="hero">
+        <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
+            <h1>Medycyna Estetyczna</h1>
+            <h2>Medycyna Estetyczna Gabinety Zabiegi Lekarze</h2>
+            <a href="#about" class="btn-get-started">Get Started</a>
+          </div>
 
-    </main>
+    </section>
+    <main id="main">
     <section id="about">
+        <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                Column
+              </div>
+              <div class="col">
+                Column
+              </div>
+            
+            </div>
+          </div>
 
     </section>
 
-    <section>
+    <section id="treatments">
 
     </section>
 
-    <section>
+    <section id="gallery">
 
     </section>
+    <section id="contact"><
+        /section>
+</main>
+<footer>
+
+</footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="script.js"></script>
