--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <!-- Navigation -->
-  <header class="container row">
-    <a href="#"><img src="/image/logo.png" alt=""></a>
+  <header class="row container">
+    <a href="#" class="logo"><img src="/image/logo.png" alt=""></a>
     <button class="toggleMenu" onclick="toggleMenu()"></button>
     <nav class="navigation row">
       <ul class="row">
-        <li><a href="">O Nas</a></li>
+        <li><a href="" class="active">O Nas</a></li>
         <li><a href="">Zabiegi</a></li>
         <li><a href="">Galeria</a></li>
         <li><a href="">Kontakt</a></li>
