ADDED HERO SECTION

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
       <a href="" class="page-btn">Apintment</a>
     </nav>
   </header>
+  <!-- END NAVIGATION -->
+
+  <!-- HERO SECTION -->
+  <section class="hero row flex container">
+    <div class="hero-content">
+      <h1>Medycyna Estetyczna</h1>
+      <p>Gabinet Medycyny Estetycznej</p>
+      <a href="" class="page-btn active">Dowiedz sie wiecej</a>
+    </div>
+    <div class="hero-img"><img src="image/hero.png" alt=""></div>
+  </section>
+  <!-- END HERO SECTION -->
   
   <script src="script.js"></script>
 </body>
