--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
     <div class="hero-img"><img src="image/hero.png" alt=""></div>
   </section>
   <!-- END HERO SECTION -->
+  <!-- ABOUT US -->
+  <section class="about row container">
+    <div class="about column">
+
+    </div>
+  </section>
+  <!-- END TAGS -->
   
   <script src="script.js"></script>
 </body>
