--- a/index.html
+++ b/index.html
@@ -37,10 +37,19 @@
   <!-- ABOUT US -->
   <section class="about row container">
     <div class="about column">
-
+<img src="image/hero2.png" alt="">
     </div>
   </section>
-  <!-- END TAGS -->
+  <!-- END ABOUTUS -->
+
+  <!-- ZABIEGI -->
+  <!-- END ZABIEGI -->
+
+  <!-- GALERIA -->
+  <!-- END GALERIA -->
+
+  <!-- KONTAKT -->
+  <!-- END KONTAKT -->
   
   <script src="script.js"></script>
 </body>
