--- a/index.html
+++ b/index.html
@@ -1,61 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Medycyna Estetyczna</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
-  
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Navigation -->
-  <header class="row container">
-    <a href="#" class="logo"><img src="/image/logo.png" alt=""></a>
-    <button class="toggleMenu" onclick="toggleMenu()"></button>
-    <nav class="navigation row">
-      <ul class="row">
-        <li><a href="" class="active">O Nas</a></li>
-        <li><a href="">Zabiegi</a></li>
-        <li><a href="">Galeria</a></li>
-        <li><a href="">Kontakt</a></li>
-      </ul>
-      <a href="" class="page-btn">Apintment</a>
-    </nav>
-  </header>
-  <!-- END NAVIGATION -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Medycyna Estetyczna</title>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+		/>
 
-  <!-- HERO SECTION -->
-  <section class="hero row flex container">
-    <div class="hero-content">
-      <h1>Medycyna Estetyczna</h1>
-      <p>Gabinet Medycyny Estetycznej</p>
-      <a href="" class="page-btn active">Dowiedz sie wiecej</a>
-    </div>
-    <div class="hero-img"><img src="image/hero.png" alt=""></div>
-  </section>
-  <!-- END HERO SECTION -->
-  <!-- Obrazek -->
-  <section class="picture row container">
-    <div class="picture column">
-<img src="image/hero2.png" alt="">
-    </div>
-  </section>
-  <!-- obrazek -->
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<!-- Navigation -->
+		<header class="row container">
+			<a href="#" class="logo"><img src="/image/logo.png" alt="" /></a>
+			<button class="toggleMenu" onclick="toggleMenu()"></button>
+			<nav class="navigation row">
+				<ul class="row">
+					<li><a href="" class="active">O Nas</a></li>
+					<li><a href="">Zabiegi</a></li>
+					<li><a href="">Galeria</a></li>
+					<li><a href="">Kontakt</a></li>
+				</ul>
+				<a href="" class="page-btn">Apintment</a>
+			</nav>
+		</header>
+		<!-- END NAVIGATION -->
 
-  <!-- ZABIEGI -->
-  <!-- END ZABIEGI -->
+		<!-- HERO SECTION -->
+		<section class="hero row flex container">
+			<div class="hero-content">
+				<h1>Medycyna Estetyczna</h1>
+				<p>Gabinet Medycyny Estetycznej</p>
+				<a href="" class="page-btn active">Dowiedz sie wiecej</a>
+			</div>
+			<div class="hero-img"><img src="image/hero.png" alt="" /></div>
+		</section>
+		<!-- END HERO SECTION -->
+		<!-- Obrazek -->
+		<section class="picture row container">
+			<div class="picture column">
+				<img src="image/hero2.png" alt="" />
+			</div>
+		</section>
+		<!-- obrazek -->
 
-  <!-- GALERIA -->
-  
-  <!-- END GALERIA -->
- 
-  <!-- KONTAKT -->
-  <!-- END KONTAKT -->
-  
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-  
-  <script src="script.js"></script>
-</body>
+		<!-- ZABIEGI -->
+		<!-- END ZABIEGI -->
+
+		<!-- GALERIA -->
+		<section class="gallery container">
+			<div class="heading">
+				<h2>Galeria</h2>
+			</div>
+			<div class="swiper mySwiper gallery-slider">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0001.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0002.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0003.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0004.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0005.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0006.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0007.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0008.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0009.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0010.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0011.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0012.jpg" alt="" />
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="swiper-img">
+							<img src="/image/IMG-20230411-WA0013.jpg" alt="" />
+						</div>
+					</div>
+				</div>
+				<div class="swiper-button-prev"></div>
+				<div class="swiper-button-next"></div>
+				<div class="swiper-pagination"></div>
+			</div>
+		</section>
+		<!-- END GALERIA -->
+
+		<!-- KONTAKT -->
+		<!-- END KONTAKT -->
+
+		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+		<script src="script.js"></script>
+	</body>
 </html>
