--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<!-- Navigation -->
 		<header class="row container">
-			<a href="#" class="logo"><img src="/image/logo.png" alt="" /></a>
+			<a href="#home" class="logo"><img src="/image/logo.png" alt="" /></a>
 			<button class="toggleMenu" onclick="toggleMenu()"></button>
 			<nav class="navigation row">
 				<ul class="row">
@@ -30,13 +30,18 @@
 		<!-- END NAVIGATION -->
 
 		<!-- HERO SECTION -->
-		<section class="hero row flex container">
-			<div class="hero-content">
-				<h1>Medycyna Estetyczna</h1>
-				<p>Gabinet Medycyny Estetycznej</p>
-				<a href="" class="page-btn active">Dowiedz sie wiecej</a>
-			</div>
-			<div class="hero-img"><img src="image/hero.png" alt="" /></div>
+		<main>
+
+		
+		<section class="hero hero-img row flex container" id="home">
+		
+					<div class="hero-content">
+						<h1>Medycyna Estetyczna</h1>
+						<p>Gabinet Medycyny Estetycznej</p>
+						<a href="" class="page-btn active">Dowiedz sie wiecej</a>
+					</div>
+		
+	
 		</section>
 		<!-- END HERO SECTION -->
 		
@@ -195,7 +200,11 @@
 
 		<!-- KONTAKT -->
 		<!-- END KONTAKT -->
+	</main>
+	<!-- Footer -->
+	<footer>
 
+	</footer>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
 		<script src="script.js"></script>
