--- a/index.html
+++ b/index.html
@@ -116,6 +116,12 @@
 		<!-- obrazek -->
 
 		<!-- ZABIEGI -->
+		<div class="treatments container">
+			<div class="heading">
+				<h2>Zabiegi</h2>
+				<p>Zabiegi medycyna estetyczna treatments</p>
+			</div>
+		</div>
 		<!-- END ZABIEGI -->
 
 		<!-- GALERIA -->
