--- a/index.html
+++ b/index.html
@@ -127,80 +127,92 @@
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
-						<h4>Zabieg 1</h4>
-						<p>Opis zabiegu</p>
+						<div class="swiper-content">
+							<h4>Zabieg 1</h4>
+							<p>Opis zabiegu</p>
+						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
-						<h4>Zabieg 2</h4>
-						<p>Opis zabiegu</p>
+						<div class="swiper-content">
+							<h4>Zabieg 2</h4>
+							<p>Opis zabiegu</p>
+						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
-						<h4>Zabieg 3</h4>
-						<p>Opis zabiegu</p>
+						<div class="swiper-content">
+							<h4>Zabieg 3</h4>
+							<p>Opis zabiegu</p>
+						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
-						<h4>Zabieg 4</h4>
-						<p>Opis zabiegu</p>
+						<div class="swiper-content">
+							<h4>Zabieg 4</h4>
+							<p>Opis zabiegu</p>
+						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
-						<h4>Zabieg 5</h4>
-						<p>Opis zabiegu</p>
+						<div class="swiper-content">
+							<h4>Zabieg 5</h4>
+							<p>Opis zabiegu</p>
+						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
-						<h4>Zabieg 6</h4>
-						<p>Opis zabiegu</p>
+						<div class="swiper-content">
+							<h4>Zabieg 6</h4>
+							<p>Opis zabiegu</p>
+						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
-						<h4>Zabieg 7</h4>
-						<p>Opis zabiegu</p>
+						<div class="swiper-content">
+							<h4>Zabieg 7</h4>
+							<p>Opis zabiegu</p>
+						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
-						<h4>Zabieg 8</h4>
-						<p>Opis zabiegu</p>
+						<div class="swiper-content">
+							<h4>Zabieg 8</h4>
+							<p>Opis zabiegu</p>
+						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
-						<h4>Zabieg 9</h4>
-						<p>Opis zabiegu</p>
+						<div class="swiper-content">
+							<h4>Zabieg 9</h4>
+							<p>Opis zabiegu</p>
+						</div>
 					</div>
 					<div class="swiper-slide">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
-						<h4>Zabieg 10</h4>
-						<p>Opis zabiegu</p>
-					</div>
-					<div class="swiper-slide">
-						<div class="swiper-img">
-							<img src="/image/treatments.jpg" alt="" />
+						<div class="swiper-content">
+							<h4>Zabieg 10</h4>
+							<p>Opis zabiegu</p>
 						</div>
-						<h4>Zabieg 1</h4>
-						<p>Opis zabiegu</p>
 					</div>
-					
 					
 				</div>
 				<div class="swiper-button-prev"></div>
