--- a/index.html
+++ b/index.html
@@ -303,12 +303,45 @@
 		<!-- END GALERIA -->
 
 		<!-- KONTAKT -->
+
 		<!-- END KONTAKT -->
 	</main>
 	<!-- Footer -->
-	<footer>
-
+	<footer class="container">
+		<div class="footer row">
+			<div class="footer-content">
+				<a href="#" class="logo"><img src="image/logo.png" alt=""></a>
+				<p>Medycyna Estetyczna</p>
+				<div class="media-links row">
+					<a href=""><img src="icon/fb.png" alt=""></a>
+					<a href=""><img src="icon/insta.png" alt=""></a>
+					<a href=""><img src="icon/whatsapp.png" alt=""></a>
+				</div>
+			</div>
+				<div>
+					<h4>Menu</h4>
+					<ul>
+						<li><a href="">O Nas</a></li>
+						<li><a href="">Zabiegi</a></li>
+						<li><a href="">Galeria</a></li>
+						<li><a href="">Kontakt</a></li>
+					</ul>
+				</div>
+				<div>
+					<h4>About</h4>
+					<ul>
+						<li><a href="">Regulamin</a></li>
+						<li><a href="">Polityka prywatności</a></li>
+					</ul>
+				</div>
+				
+				
+			</div>
+			<hr>
+			<p class="copy-right">All rights reserved SebastianSłoma. &copy; 2023</p>
+		
 	</footer>
+	<!-- End Footer -->
 		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
 		<script src="script.js"></script>
