--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		/>
 
 		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0"
+		/>
 	</head>
 	<body>
 		<!-- Navigation -->
@@ -23,8 +27,12 @@
 					<li><a href="">Zabiegi</a></li>
 					<li><a href="">Galeria</a></li>
 					<li><a href="">Kontakt</a></li>
+					<div class="theme-toggler">
+						<span class="material-symbols-sharp active"> light_mode </span>
+						<span class="material-symbols-sharp"> dark_mode </span>
+					</div>
 				</ul>
-				<a href="" class="page-btn">Apintment</a>
+				
 			</nav>
 		</header>
 		<!-- END NAVIGATION -->
@@ -313,8 +321,8 @@
 				<a href="#" class="logo"><img src="image/logo.png" alt=""></a>
 				<p>Medycyna Estetyczna</p>
 				<div class="media-links row">
-					<a href=""><img src="icon/fb.png" alt=""></a>
-					<a href=""><img src="icon/insta.png" alt=""></a>
+					<a href=""><img src="icon/facebook.png" alt=""></a>
+					<a href=""><img src="icon/instagram.png" alt=""></a>
 					<a href=""><img src="icon/whatsapp.png" alt=""></a>
 				</div>
 			</div>
