added filter gallery

--- a/index.html
+++ b/index.html
@@ -134,23 +134,23 @@
 				<p>All</p>
 			</div>
 			<div class="page-btn filter-btn" data-cat="treat1">
-				<p>Art</p>
+				<p>Zabieg 1</p>
 			</div>
 			<div class="page-btn filter-btn" data-cat="treat2">
-				<p>Photography</p>
+				<p>Zabieg 2</p>
 			</div>
 			<div class="page-btn filter-btn" data-cat="treat3">
-				<p>Games</p>
+				<p>Zabieg 3</p>
 			</div>
 			<div class="page-btn filter-btn" data-cat="treat4">
-				<p>Music</p>
+				<p>Zabieg 4</p>
 			</div>
 		</div>
 		
 	</div>
 
 	<div class="explore-cards column">
-		<a href="#" class="card" data-type="treat1" data-date="2000">
+		<a href="#" class="card" data-type="treat1">
 			<div class="card-img">
 				<img src="image/treatments.jpg" alt="grim reaper" />
 			</div>
@@ -163,7 +163,7 @@
 			</div>
 		</a>
 
-		<a href="#" class="card" data-type="treat1" data-date="1000">
+		<a href="#" class="card" data-type="treat1">
 			<div class="card-img">
 				<img src="image/treatments.jpg" alt="grim reaper" />
 			</div>
@@ -175,7 +175,7 @@
 			</div>
 		</a>
 
-		<a href="#" class="card" data-type="treat1" data-date="2010">
+		<a href="#" class="card" data-type="treat1">
 			<div class="card-img">
 				<img src="image/treatments.jpg" alt="grim reaper" />
 			</div>
@@ -186,7 +186,7 @@
 			</div>
 		</a>
 
-		<a href="#" class="card"data-type="treat2" data-date="2300">
+		<a href="#" class="card"data-type="treat2">
 			<div class="card-img">
 				<img src="image/treatments.jpg" alt="grim reaper" />
 			</div>
@@ -200,7 +200,7 @@
 			</div>
 		</a>
 
-		<a href="#" class="card" data-type="treat3" data-date="1300">
+		<a href="#" class="card" data-type="treat3">
 			<div class="card-img">
 				<img src="image/treatments.jpg" alt="grim reaper" />
 			</div>
@@ -211,7 +211,7 @@
 			</div>
 		</a>
 
-		<a href="#" class="card" data-type="treat3" data-date="2050">
+		<a href="#" class="card" data-type="treat3">
 			<div class="card-img">
 				<img src="image/treatments.jpg" alt="grim reaper" />
 			</div>
@@ -224,7 +224,7 @@
 				<button class="page-btn active">Opis zabiegu</button>
 			</div>
 		</a>
-		<a href="#" class="card" data-type="treat4" data-date="2050">
+		<a href="#" class="card" data-type="treat4">
 			<div class="card-img">
 				<img src="image/treatments.jpg" alt="grim reaper" />
 			</div>
@@ -237,7 +237,7 @@
 				<button class="page-btn active">Opis zabiegu</button>
 			</div>
 		</a>
-		<a href="#" class="card" data-type="treat4" data-date="2050">
+		<a href="#" class="card" data-type="treat4">
 			<div class="card-img">
 				<img src="image/treatments.jpg" alt="grim reaper" />
 			</div>
@@ -250,7 +250,7 @@
 				<button class="page-btn active">Opis zabiegu</button>
 			</div>
 		</a>
-		<a href="#" class="card" data-type="treat2" data-date="2050">
+		<a href="#" class="card" data-type="treat2">
 			<div class="card-img">
 				<img src="image/treatments.jpg" alt="grim reaper" />
 			</div>
@@ -279,19 +279,19 @@
 
 			<div class="tags-filter row">
 				<div class="tags row">
-					<div class="page-btn filter-btn active" data-cat="all">
+					<div class="page-btn filter-btn2 active" data-cat="all">
 						<p>All</p>
 					</div>
-					<div class="page-btn filter-btn" data-cat="treatments1">
+					<div class="page-btn filter-btn2" data-cat="treatments1">
 						<p>Zabieg 1</p>
 					</div>
-					<div class="page-btn filter-btn" data-cat="treatments2">
+					<div class="page-btn filter-btn2" data-cat="treatments2">
 						<p>Zabieg 2</p>
 					</div>
-					<div class="page-btn filter-btn" data-cat="treatments3">
+					<div class="page-btn filter-btn2" data-cat="treatments3">
 						<p>Zabieg 3</p>
 					</div>
-					<div class="page-btn filter-btn" data-cat="treatments4">
+					<div class="page-btn filter-btn2" data-cat="treatments4">
 						<p>Zabieg 4</p>
 					</div>
 				</div>
@@ -300,7 +300,7 @@
 
 			<div class="swiper mySwiper treatments-slider">
 				<div class="swiper-wrapper explore-treatments">
-					<div class="swiper-slide" data-type="treatments1">
+					<div class="swiper-slide imag" data-type="treatments1">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
@@ -309,7 +309,7 @@
 							<p>Opis zabiegu</p>
 						</div>
 					</div>
-					<div class="swiper-slide" data-type="treatments1">
+					<div class="swiper-slide imag" data-type="treatments1">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
@@ -318,7 +318,7 @@
 							<p>Opis zabiegu</p>
 						</div>
 					</div>
-					<div class="swiper-slide" data-type="treatments2">
+					<div class="swiper-slide imag" data-type="treatments2">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
@@ -327,7 +327,7 @@
 							<p>Opis zabiegu</p>
 						</div>
 					</div>
-					<div class="swiper-slide" data-type="treatments2">
+					<div class="swiper-slide imag" data-type="treatments2">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
@@ -336,7 +336,7 @@
 							<p>Opis zabiegu</p>
 						</div>
 					</div>
-					<div class="swiper-slide" data-type="treatments3">
+					<div class="swiper-slide imag" data-type="treatments3">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
@@ -345,7 +345,7 @@
 							<p>Opis zabiegu</p>
 						</div>
 					</div>
-					<div class="swiper-slide" data-type="treatments4">
+					<div class="swiper-slide imag" data-type="treatments4">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
@@ -354,7 +354,7 @@
 							<p>Opis zabiegu</p>
 						</div>
 					</div>
-					<div class="swiper-slide" data-type="treatments3">
+					<div class="swiper-slide imag" data-type="treatments3">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
@@ -363,7 +363,7 @@
 							<p>Opis zabiegu</p>
 						</div>
 					</div>
-					<div class="swiper-slide" data-type="treatments4">
+					<div class="swiper-slide imag" data-type="treatments4">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
@@ -372,7 +372,7 @@
 							<p>Opis zabiegu</p>
 						</div>
 					</div>
-					<div class="swiper-slide" data-type="treatments3">
+					<div class="swiper-slide imag" data-type="treatments3">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
@@ -381,7 +381,7 @@
 							<p>Opis zabiegu</p>
 						</div>
 					</div>
-					<div class="swiper-slide" data-type="treatments1">
+					<div class="swiper-slide imag" data-type="treatments1">
 						<div class="swiper-img">
 							<img src="/image/treatments.jpg" alt="" />
 						</div>
