--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
 		/>
-
+		
 		<link rel="stylesheet" href="style.css" />
 		<link
 			rel="stylesheet"
@@ -358,13 +358,11 @@
 <div class="heading">
 	<h2>Kontakt</h2>
 	<p>Kontakt medycyna estetyczna</p>
-</div>
-<div class="contact-content row flex">
-	<div>
-		<a href="tel:+48999999999"><img src="icon/telephone.png" alt=""><p>+48-999-999-999</p></a>
+	<a href="tel:+48999999999"><img src="icon/telephone.png" alt=""><p>+48-999-999-999</p></a>
 		<a href="mailto:test@gmail.com"><img src="icon/mail.png" alt=""><p>test@gmail.com</p></a>
 		<a href=""><img src="icon/location.png" alt=""><p>Poznań</p></a>
-	</div>
+</div>
+<div class="contact-content row flex">
 	<div class="form">
 		<h3>Formularz kontaktowy</h3>
 		<form action="" class="column">
@@ -373,9 +371,12 @@
 			<textarea name="" id="" cols="30" rows="10" placeholder="Wiadomość..."></textarea>
 			<button type="submit" class="page-btn">Wyślij</button>
 		</form>
+		
 	</div>
 	<div class="contact-details row">
+		
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d311602.85666285345!2d16.310815068485276!3d52.39947500429826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470444d2ece10ab7%3A0xa4ea31980334bfd1!2zUG96bmHFhA!5e0!3m2!1spl!2spl!4v1682668360726!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		
 	</div>
 </div>
 
@@ -399,10 +400,10 @@
 				<div>
 					<h4>Menu</h4>
 					<ul>
-						<li><a href="">O Nas</a></li>
-						<li><a href="">Zabiegi</a></li>
-						<li><a href="">Galeria</a></li>
-						<li><a href="">Kontakt</a></li>
+						<li><a href="#about">O Nas</a></li>
+						<li><a href="#treatments">Zabiegi</a></li>
+						<li><a href="#gallery">Galeria</a></li>
+						<li><a href="#contact">Kontakt</a></li>
 					</ul>
 				</div>
 				<div>
@@ -420,6 +421,7 @@
 		
 	</footer>
 	<!-- End Footer -->
+	
 		<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
 		<script src="script.js"></script>
